--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,13 @@
-.eye-icon {
-  cursor: pointer;
-  user-select: none;
+.img{
+  position: relative;
+  width: 100vw;  
+  height: 90vh; 
+  object-fit: cover;
+}
+
+.text-overlay{
+  position: absolute;
+  top : 50%;
+  color:antiquewhite;
+  font-size: 50px;
 }
